[package]
name = "rsncp"
version = "0.1.0"
authors = ["Jeff Parent <jeff@commentedcode.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tar = "0.4.29"
clap = "2.33.1"
glob = "0.3.0"
flate2 = "1.0"
socket2 = { version = "0.3.12", features = ["reuseport"] }
lazy_static = "1.1.1"
